Don't wrap long counter numbers in the footer.

--- a/org.jacoco.report/src/org/jacoco/report/html/resources/report.css
+++ b/org.jacoco.report/src/org/jacoco/report/html/resources/report.css
@@ -138,6 +138,11 @@ table.coverage tbody td.ctr2 {
   padding:2px 12px 2px 4px;
 }
 
+table.coverage tfoot td {
+  white-space:nowrap;
+  padding:2px 12px 2px 6px;
+}
+
 table.coverage tfoot td.ctr1 {
   text-align:right;
   padding:2px 0px 2px 6px;
