Trac #95: Remove element type "SESSION", rename style "session" to "report".

--- a/org.jacoco.report/src/org/jacoco/report/html/resources/report.css
+++ b/org.jacoco.report/src/org/jacoco/report/html/resources/report.css
@@ -14,9 +14,9 @@ h1 {
 }
 
 
-.el_session {
+.el_report {
   padding-left:18px;
-  background-image:url(session.gif);
+  background-image:url(report.gif);
   background-position:left center;
   background-repeat:no-repeat;
 }
