--- a/org.jacoco.doc/docroot/doc/.resources/doc.css
+++ b/org.jacoco.doc/docroot/doc/.resources/doc.css
@@ -29,9 +29,9 @@ h1 {
   color:#a0a0a0;
 }
 
-.el_session {
+.el_report {
   padding-left:18px;
-  background-image:url(session.gif);
+  background-image:url(report.gif);
   background-position:left center;
   background-repeat:no-repeat;
 }
