Trac #88: Icon for session items.

--- a/org.jacoco.report/src/org/jacoco/report/html/resources/report.css
+++ b/org.jacoco.report/src/org/jacoco/report/html/resources/report.css
@@ -63,9 +63,9 @@ h1 {
   background-repeat:no-repeat;
 }
 
-.el_sessions {
+.el_session {
   padding-left:18px;
-  background-image:url(sessions.gif);
+  background-image:url(session.gif);
   background-position:left center;
   background-repeat:no-repeat;
 }
