--- a/org.jacoco.report/src/org/jacoco/report/html/resources/report.css
+++ b/org.jacoco.report/src/org/jacoco/report/html/resources/report.css
@@ -112,7 +112,7 @@ table.coverage thead td {
 table.coverage thead td.ctr1 {
   text-align:right;
   padding-right:4px;
-  border-left:#b0b0b0 1px dotted;
+  border-left:#cccccc 1px solid;
 }
 
 table.coverage thead td.ctr2 {
@@ -133,7 +133,7 @@ table.coverage tbody tr:hover {
 table.coverage tbody td.ctr1 {
   text-align:right;
   padding-right:4px;
-  border-left:#d6d3ce 1px dotted;
+  border-left:#e8e8e8 1px solid;
 }
 
 table.coverage tbody td.ctr2 {
@@ -149,7 +149,7 @@ table.coverage tfoot td {
 table.coverage tfoot td.ctr1 {
   text-align:right;
   padding-right:4px;
-  border-left:#d6d3ce 1px dotted;
+  border-left:#e8e8e8 1px solid;
 }
 
 table.coverage tfoot td.ctr2 {
