--- a/org.jacoco.report/src/org/jacoco/report/internal/html/resources/report.css
+++ b/org.jacoco.report/src/org/jacoco/report/internal/html/resources/report.css
@@ -138,6 +138,10 @@ table.coverage thead td {
   border-bottom:#b0b0b0 1px solid;
 }
 
+table.coverage thead td.bar {
+  border-left:#cccccc 1px solid;
+}
+
 table.coverage thead td.ctr1 {
   text-align:right;
   border-left:#cccccc 1px solid;
@@ -173,6 +177,10 @@ table.coverage tbody tr:hover {
   background: #f0f0d0 !important;
 }
 
+table.coverage tbody td.bar {
+  border-left:#e8e8e8 1px solid;
+}
+
 table.coverage tbody td.ctr1 {
   text-align:right;
   padding-right:14px;
@@ -188,6 +196,10 @@ table.coverage tbody td.ctr2 {
 table.coverage tfoot td {
   white-space:nowrap;
   padding:2px 6px 2px 6px;
+}
+
+table.coverage tfoot td.bar {
+  border-left:#e8e8e8 1px solid;
 }
 
 table.coverage tfoot td.ctr1 {
