Better accessibility of JaCoCo reports (GitHub #3)
Adjust saturation of red source highlighting in HTML reports to make
JaCoCo reports more accessible to red/green blind users.

--- a/org.jacoco.report/src/org/jacoco/report/internal/html/resources/report.css
+++ b/org.jacoco.report/src/org/jacoco/report/internal/html/resources/report.css
@@ -91,7 +91,7 @@ pre.source span.fc {
 }
 
 pre.source span.nc {
-  background-color:#ffcccc;
+  background-color:#ffaaaa;
 }
 
 pre.source span.pc {
