Maven goal `report-aggregate` should consider dependencies specified using version range (#658)

--- a/jacoco-maven-plugin.test/it/it-report-aggregate/report/pom.xml
+++ b/jacoco-maven-plugin.test/it/it-report-aggregate/report/pom.xml
@@ -38,7 +38,7 @@
     <dependency>
       <groupId>jacoco</groupId>
       <artifactId>child2</artifactId>
-      <version>${project.version}</version>
+      <version>[2-SNAPSHOT,)</version>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
